--- a/src/styles.css
+++ b/src/styles.css
@@ -117,7 +117,6 @@
     z-index: 99;
     top: 8px;
     right: 8px;
-    margin-right: 400px;
   }
   .mdl-demo section .section__text {
     -webkit-flex-grow: 1;
@@ -129,7 +128,7 @@
     padding-top: 8px;
   }
   .mdl-demo section .section__text h5 {
-    font-size: inh  erit;
+    font-size: inherit;
     margin: 0;
     margin-bottom: 0.5em;
   }
@@ -153,4 +152,13 @@
     margin-bottom: 16px;
   }
 
-  
+  #question{
+    position: relative;
+    overflow: visible;
+  }
+
+  #timer{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+  }
